@@ -775,12 +775,9 @@ literal|"data"
 argument_list|)
 decl_stmt|;
 specifier|protected
-specifier|static
-specifier|final
 name|HTableDescriptor
 name|TABLE_DESCRIPTOR
 decl_stmt|;
-static|static
 block|{
 name|TABLE_DESCRIPTOR
 operator|=
@@ -974,6 +971,9 @@ name|conf
 operator|=
 name|c
 expr_stmt|;
+name|setTableDesc
+argument_list|()
+expr_stmt|;
 block|}
 comment|/**    * Implementations can have their status set.    */
 specifier|static
@@ -991,6 +991,62 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
+block|}
+comment|/**    * Implementations can have their status set.    */
+specifier|protected
+name|void
+name|setTableDesc
+parameter_list|()
+block|{
+name|TABLE_DESCRIPTOR
+operator|=
+operator|new
+name|HTableDescriptor
+argument_list|(
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"hbase.pe.tablename"
+argument_list|,
+literal|"TestTable"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|TABLE_DESCRIPTOR
+operator|.
+name|addFamily
+argument_list|(
+operator|new
+name|HColumnDescriptor
+argument_list|(
+name|FAMILY_NAME
+argument_list|,
+literal|3
+argument_list|,
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"hbase.pe.compress"
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_COMPRESSION
+argument_list|)
+argument_list|,
+literal|false
+argument_list|,
+literal|true
+argument_list|,
+name|HColumnDescriptor
+operator|.
+name|DEFAULT_TTL
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    *  This class works as the InputSplit of Performance Evaluation    *  MapReduce InputFormat, and the Record Value of RecordReader.     *  Each map task will only read one record from a PeInputSplit,     *  the record value is the PeInputSplit itself.    */
 specifier|public
@@ -2775,7 +2831,6 @@ name|subdir
 return|;
 block|}
 comment|/*    * A test.    * Subclass to particularize what happens per row.    */
-specifier|static
 specifier|abstract
 class|class
 name|Test
@@ -3987,13 +4042,170 @@ index|[
 name|ROW_LENGTH
 index|]
 decl_stmt|;
+name|int
+name|i
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|i
+operator|=
+literal|0
+init|;
+name|i
+operator|<
+operator|(
+name|ROW_LENGTH
+operator|-
+literal|8
+operator|)
+condition|;
+name|i
+operator|+=
+literal|8
+control|)
+block|{
+name|b
+index|[
+name|i
+index|]
+operator|=
+call|(
+name|byte
+call|)
+argument_list|(
+literal|65
+operator|+
 name|r
 operator|.
-name|nextBytes
+name|nextInt
 argument_list|(
-name|b
+literal|26
+argument_list|)
 argument_list|)
 expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|1
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|2
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|3
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|4
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|5
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|6
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+name|b
+index|[
+name|i
+operator|+
+literal|7
+index|]
+operator|=
+name|b
+index|[
+name|i
+index|]
+expr_stmt|;
+block|}
+name|byte
+name|a
+init|=
+call|(
+name|byte
+call|)
+argument_list|(
+literal|65
+operator|+
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|26
+argument_list|)
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+init|;
+name|i
+operator|<
+name|ROW_LENGTH
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|b
+index|[
+name|i
+index|]
+operator|=
+name|a
+expr_stmt|;
+block|}
 return|return
 name|b
 return|;
@@ -4731,16 +4943,23 @@ name|err
 operator|.
 name|println
 argument_list|(
-literal|"  [--miniCluster] [--nomapred] [--rows=ROWS]<command><nclients>"
+literal|"  [--miniCluster] [--nomapred] [--rows=ROWS] [--table=NAME] [--compress=TYPE] \\"
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"<command><nclients>"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
 operator|.
 name|println
 argument_list|()
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4749,7 +4968,7 @@ name|println
 argument_list|(
 literal|"Options:"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4760,7 +4979,7 @@ literal|" master          Specify host and port of HBase "
 operator|+
 literal|"cluster master. If not present,"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4769,7 +4988,7 @@ name|println
 argument_list|(
 literal|"                 address is read from configuration"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4778,7 +4997,7 @@ name|println
 argument_list|(
 literal|" miniCluster     Run the test on an HBaseMiniCluster"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4789,7 +5008,7 @@ literal|" nomapred        Run multiple clients using threads "
 operator|+
 literal|"(rather than use mapreduce)"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4798,14 +5017,32 @@ name|println
 argument_list|(
 literal|" rows            Rows each client runs. Default: One million"
 argument_list|)
-expr_stmt|;
+argument_list|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|" table           Alternate table name. Default: 'TestTable'"
+argument_list|)
+argument_list|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|" compress        Compression type to use. Default: 'NONE'"
+argument_list|)
+argument_list|;
 name|System
 operator|.
 name|err
 operator|.
 name|println
 argument_list|()
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4814,7 +5051,7 @@ name|println
 argument_list|(
 literal|"Command:"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4823,7 +5060,7 @@ name|println
 argument_list|(
 literal|" randomRead      Run random read test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4834,7 +5071,7 @@ literal|" randomReadMem   Run random read test where table "
 operator|+
 literal|"is in memory"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4843,7 +5080,7 @@ name|println
 argument_list|(
 literal|" randomSeekScan  Run random seek and scan 100 test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4852,7 +5089,7 @@ name|println
 argument_list|(
 literal|" randomWrite     Run random write test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4861,7 +5098,7 @@ name|println
 argument_list|(
 literal|" sequentialRead  Run sequential read test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4870,7 +5107,7 @@ name|println
 argument_list|(
 literal|" sequentialWrite Run sequential write test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4879,14 +5116,14 @@ name|println
 argument_list|(
 literal|" scan            Run scan test"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
 operator|.
 name|println
 argument_list|()
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4895,7 +5132,7 @@ name|println
 argument_list|(
 literal|"Args:"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4906,7 +5143,7 @@ literal|" nclients        Integer. Required. Total number of "
 operator|+
 literal|"clients (and HRegionServers)"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4915,7 +5152,7 @@ name|println
 argument_list|(
 literal|"                 running: 1<= value<= 500"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4924,7 +5161,7 @@ name|println
 argument_list|(
 literal|"Examples:"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4933,7 +5170,7 @@ name|println
 argument_list|(
 literal|" To run a single evaluation client:"
 argument_list|)
-expr_stmt|;
+argument_list|;
 name|System
 operator|.
 name|err
@@ -4944,7 +5181,7 @@ literal|" $ bin/hbase "
 operator|+
 literal|"org.apache.hadoop.hbase.PerformanceEvaluation sequentialWrite 1"
 argument_list|)
-expr_stmt|;
+argument_list|;
 block|}
 specifier|private
 name|void
@@ -5190,6 +5427,76 @@ argument_list|)
 expr_stmt|;
 continue|continue;
 block|}
+specifier|final
+name|String
+name|table
+init|=
+literal|"--table="
+decl_stmt|;
+if|if
+condition|(
+name|cmd
+operator|.
+name|startsWith
+argument_list|(
+name|table
+argument_list|)
+condition|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"hbase.pe.tablename"
+argument_list|,
+name|cmd
+operator|.
+name|substring
+argument_list|(
+name|table
+operator|.
+name|length
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+specifier|final
+name|String
+name|compress
+init|=
+literal|"--compress="
+decl_stmt|;
+if|if
+condition|(
+name|cmd
+operator|.
+name|startsWith
+argument_list|(
+name|compress
+argument_list|)
+condition|)
+block|{
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"hbase.pe.compress"
+argument_list|,
+name|cmd
+operator|.
+name|substring
+argument_list|(
+name|compress
+operator|.
+name|length
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
 if|if
 condition|(
 name|COMMANDS
@@ -5200,6 +5507,10 @@ name|cmd
 argument_list|)
 condition|)
 block|{
+name|setTableDesc
+argument_list|()
+expr_stmt|;
+comment|// update table desc
 name|getArgs
 argument_list|(
 name|i
